--- a/test/conda-environment.yaml
+++ b/test/conda-environment.yaml
@@ -1,11 +1,10 @@
 name: ml-cicd
 channels:
-  - conda-forge
+  - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - anyio=3.5.0=py311h06a4308_0
-  - appdirs=1.4.4=pypi_0
   - argon2-cffi=21.3.0=pyhd3eb1b0_0
   - argon2-cffi-bindings=21.2.0=py311h5eee18b_0
   - asttokens=2.0.5=pyhd3eb1b0_0
@@ -18,29 +17,20 @@ dependencies:
   - brotli-python=1.0.9=py311h6a678d5_7
   - bzip2=1.0.8=h7b6447c_0
   - ca-certificates=2023.12.12=h06a4308_0
-  - catboost=1.2.2=pypi_0
   - certifi=2023.11.17=py311h06a4308_0
   - cffi=1.16.0=py311h5eee18b_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - click=8.1.7=pypi_0
   - comm=0.1.2=py311h06a4308_0
-  - contourpy=1.2.0=pypi_0
   - cryptography=41.0.7=py311hdda0065_0
-  - cycler=0.12.1=pypi_0
   - debugpy=1.6.7=py311h6a678d5_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
-  - docker-pycreds=0.4.0=pypi_0
   - executing=0.8.3=pyhd3eb1b0_0
-  - fonttools=4.47.0=pypi_0
-  - gitdb=4.0.11=pypi_0
-  - gitpython=3.1.40=pypi_0
   - idna=3.4=py311h06a4308_0
   - ipykernel=6.25.0=py311h92b7b1e_0
   - ipython=8.15.0=py311h06a4308_0
   - jedi=0.18.1=py311h06a4308_1
   - jinja2=3.1.2=py311h06a4308_0
-  - joblib=1.3.2=pypi_0
   - json5=0.9.6=pyhd3eb1b0_0
   - jsonschema=4.19.2=py311h06a4308_0
   - jsonschema-specifications=2023.7.1=py311h06a4308_0
@@ -53,7 +43,6 @@ dependencies:
   - jupyterlab=4.0.8=py311h06a4308_0
   - jupyterlab_pygments=0.1.2=py_0
   - jupyterlab_server=2.25.1=py311h06a4308_0
-  - kiwisolver=1.4.5=pypi_0
   - ld_impl_linux-64=2.38=h1181459_1
   - libffi=3.4.4=h6a678d5_0
   - libgcc-ng=11.2.0=h1234567_1
@@ -61,9 +50,7 @@ dependencies:
   - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.41.5=h5eee18b_0
-  - lightgbm=4.2.0=pypi_0
   - markupsafe=2.1.1=py311h5eee18b_0
-  - matplotlib=3.8.2=pypi_0
   - matplotlib-inline=0.1.6=py311h06a4308_0
   - mistune=2.0.4=py311h06a4308_0
   - nbclient=0.8.0=py311h06a4308_0
@@ -73,34 +60,27 @@ dependencies:
   - nest-asyncio=1.5.6=py311h06a4308_0
   - notebook=7.0.6=py311h06a4308_0
   - notebook-shim=0.2.3=py311h06a4308_0
-  - numpy=1.26.2=pypi_0
   - openssl=3.0.12=h7f8727e_0
   - overrides=7.4.0=py311h06a4308_0
   - packaging=23.1=py311h06a4308_0
-  - pandas=2.1.4=pypi_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=10.1.0=pypi_0
   - pip=23.3.1=py311h06a4308_0
   - platformdirs=3.10.0=py311h06a4308_0
-  - plotly=5.18.0=pypi_0
   - prometheus_client=0.14.1=py311h06a4308_0
   - prompt-toolkit=3.0.36=py311h06a4308_0
-  - protobuf=4.25.1=pypi_0
   - psutil=5.9.0=py311h5eee18b_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
   - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.15.1=py311h06a4308_1
   - pyopenssl=23.2.0=py311h06a4308_0
-  - pyparsing=3.1.1=pypi_0
   - pysocks=1.7.1=py311h06a4308_0
   - python=3.11.5=h955ad1f_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-fastjsonschema=2.16.2=py311h06a4308_0
-  - python-graphviz=0.20.1=pypi_0
   - python-json-logger=2.0.7=py311h06a4308_0
   - pytz=2023.3.post1=py311h06a4308_0
   - pyyaml=6.0.1=py311h5eee18b_0
@@ -111,157 +91,58 @@ dependencies:
   - rfc3339-validator=0.1.4=py311h06a4308_0
   - rfc3986-validator=0.1.1=py311h06a4308_0
   - rpds-py=0.10.6=py311hb02cf49_0
-  - scikit-learn=1.3.2=pypi_0
-  - scipy=1.11.4=pypi_0
-  - seaborn=0.13.0=pypi_0
   - send2trash=1.8.2=py311h06a4308_0
-  - sentry-sdk=1.39.1=pypi_0
-  - setproctitle=1.3.3=pypi_0
   - setuptools=68.2.2=py311h06a4308_0
   - six=1.16.0=pyhd3eb1b0_1
-  - smmap=5.0.1=pypi_0
   - sniffio=1.2.0=py311h06a4308_1
   - soupsieve=2.5=py311h06a4308_0
   - sqlite=3.41.2=h5eee18b_0
   - stack_data=0.2.0=pyhd3eb1b0_0
-  - tenacity=8.2.3=pypi_0
   - terminado=0.17.1=py311h06a4308_0
-  - threadpoolctl=3.2.0=pypi_0
   - tinycss2=1.2.1=py311h06a4308_0
   - tk=8.6.12=h1ccaba5_0
   - tornado=6.3.3=py311h5eee18b_0
   - traitlets=5.7.1=py311h06a4308_0
   - typing-extensions=4.7.1=py311h06a4308_0
   - typing_extensions=4.7.1=py311h06a4308_0
-  - tzdata=2023.3=pypi_0
   - urllib3=1.26.18=py311h06a4308_0
-  - wandb=0.16.1=pypi_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
   - webencodings=0.5.1=py311h06a4308_1
   - websocket-client=0.58.0=py311h06a4308_4
   - wheel=0.41.2=py311h06a4308_0
-  - xgboost=2.0.3=pypi_0
   - xz=5.4.5=h5eee18b_0
   - yaml=0.2.5=h7b6447c_0
   - zeromq=4.3.4=h2531618_0
   - zlib=1.2.13=h5eee18b_0
   - pip:
-    - anyio
-    - appdirs
-    - argon2-cffi
-    - argon2-cffi-bindings
-    - asttokens
-    - async-lru
-    - attrs
-    - Babel
-    - backcall
-    - beautifulsoup4
-    - bleach
-    - Brotli
-    - catboost
-    - certifi
-    - cffi
-    - charset-normalizer
-    - click
-    - comm
-    - contourpy
-    - cryptography
-    - cycler
-    - debugpy
-    - decorator
-    - defusedxml
-    - docker-pycreds
-    - executing
-    - fastjsonschema
-    - fonttools
-    - gitdb
-    - GitPython
-    - graphviz
-    - idna
-    - ipykernel
-    - ipython
-    - jedi
-    - Jinja2
-    - joblib
-    - json5
-    - jsonschema
-    - jsonschema-specifications
-    - jupyter-events
-    - jupyter-lsp
-    - jupyter_client
-    - jupyter_core
-    - jupyter_server
-    - jupyter_server_terminals
-    - jupyterlab
-    - jupyterlab-pygments
-    - jupyterlab_server
-    - kiwisolver
-    - lightgbm
-    - MarkupSafe
-    - matplotlib
-    - matplotlib-inline
-    - mistune
-    - nbclient
-    - nbconvert
-    - nbformat
-    - nest-asyncio
-    - notebook
-    - notebook_shim
-    - numpy
-    - overrides
-    - packaging
-    - pandas
-    - pandocfilters
-    - parso
-    - pexpect
-    - pickleshare
-    - Pillow
-    - platformdirs
-    - plotly
-    - prometheus-client
-    - prompt-toolkit
-    - protobuf
-    - psutil
-    - ptyprocess
-    - pure-eval
-    - pycparser
-    - Pygments
-    - pyOpenSSL
-    - pyparsing
-    - PySocks
-    - python-dateutil
-    - python-json-logger
-    - pytz
-    - PyYAML
-    - pyzmq
-    - referencing
-    - requests
-    - rfc3339-validator
-    - rfc3986-validator
-    - rpds-py
-    - scikit-learn
-    - scipy
-    - seaborn
-    - Send2Trash
-    - sentry-sdk
-    - setproctitle
-    - six
-    - smmap
-    - sniffio
-    - soupsieve
-    - stack-data
-    - tenacity
-    - terminado
-    - threadpoolctl
-    - tinycss2
-    - tornado
-    - traitlets
-    - typing_extensions
-    - tzdata
-    - urllib3
-    - wandb
-    - wcwidth
-    - webencodings
-    - websocket-client
-    - xgboost
-prefix: /home/desktop/anaconda3/envs/marketing
+      - appdirs==1.4.4
+      - catboost==1.2.2
+      - click==8.1.7
+      - contourpy==1.2.0
+      - cycler==0.12.1
+      - docker-pycreds==0.4.0
+      - fonttools==4.47.0
+      - gitdb==4.0.11
+      - gitpython==3.1.40
+      - joblib==1.3.2
+      - kiwisolver==1.4.5
+      - lightgbm==4.2.0
+      - matplotlib==3.8.2
+      - numpy==1.26.2
+      - pandas==2.1.4
+      - pillow==10.1.0
+      - plotly==5.18.0
+      - protobuf==4.25.1
+      - pyparsing==3.1.1
+      - python-graphviz==0.15
+      - scikit-learn==1.3.2
+      - scipy==1.11.4
+      - seaborn==0.13.0
+      - sentry-sdk==1.39.1
+      - setproctitle==1.3.3
+      - smmap==5.0.1
+      - tenacity==8.2.3
+      - threadpoolctl==3.2.0
+      - tzdata==2023.3
+      - wandb==0.16.1
+      - xgboost==2.0.3
