--- a/test/conda-environment.yaml
+++ b/test/conda-environment.yaml
@@ -122,6 +122,7 @@ dependencies:
       - cycler==0.12.1
       - docker-pycreds==0.4.0
       - fonttools==4.47.0
+      - Flask==3.0.0
       - gitdb==4.0.11
       - gitpython==3.1.40
       - joblib==1.3.2
