--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -49,10 +49,10 @@ jobs:
         conda run -n ml-cicd python hyperparameters_tuning/tune_hyperparameter.py
       shell: bash
 
-    - name: 4. Train
-      run: |
-        conda run -n ml-cicd python train/train.py
-      shell: bash
+    # - name: 4. Train
+    #   run: |
+    #     conda run -n ml-cicd python train/train.py
+    #   shell: bash
 
     - name: 5. Deploy
       run: |
