--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -54,14 +54,9 @@ jobs:
     #     conda run -n ml-cicd python train/train.py
     #   shell: bash
 
-    - name: 5. Deploy
+    - name: 5. Deploy and Test API
       run: |
         conda run -n ml-cicd python inference/inference.py
-      shell: bash
-
-    - name: 6. Test API
-      run: |
-        curl -X POST -H "Content-Type: application/json" -d '{"age": 32, "job": "management", "marital": "married", "education": "tertiary", "default": "no", "balance": 1500, "housing": "no", "loan": "no", "contact": "cellular", "day": 28, "month": "jan", "duration": 458, "campaign": 2, "pdays": -1, "previous": 0, "poutcome": "unknown", "is_elderly": 1, "has_housing_loan": 0, "is_married": 1, "has_previous_contact": 1, "is_tertiary_educated": 1, "is_admin_job": 0, "has_default": 0, "is_month_may": 0, "is_loan": 0, "campaign_greater_than_1": 1}' http://127.0.0.1:5000/predict
       shell: bash
 
 env:
