--- a/test/conda-environment.yaml
+++ b/test/conda-environment.yaml
@@ -123,6 +123,7 @@ dependencies:
       - docker-pycreds==0.4.0
       - fonttools==4.47.0
       - Flask==3.0.0
+      - ghapi==1.0.4
       - gitdb==4.0.11
       - gitpython==3.1.40
       - joblib==1.3.2
