--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -49,7 +49,7 @@ jobs:
         WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
         WANDB_RUN_ID: "${{ steps.get-runid-value.outputs.RUN_ID }}"
         WANDB_RUN_PATH: "mustafakeser/marketing-campaign-wb/"
-        WANDB_REGISTRY_PATH: "mustafakeser/model-registry/My Registered Model"
+        WANDB_REGISTRY_PATH: "mustafakeser/marketing-campaign-wb/pipeline_fbtydk8g"
         
     - name: Create a deployment
       if: steps.wandb-promote.outcome == 'success' 
